--- a/package.json
+++ b/package.json
@@ -24,9 +24,13 @@
   "homepage": "https://github.com/nick-dolf/tree-rat#readme",
   "dependencies": {
     "chokidar": "^3.5.3",
+    "connect-livereload": "^0.6.1",
+    "cookie-session": "^2.0.0",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "fs-extra": "^11.1.1",
+    "livereload": "^0.9.3",
     "puff-cheeks": "^1.0.0",
     "validator": "^13.11.0"
   }
