--- a/package.json
+++ b/package.json
@@ -23,15 +23,22 @@
   },
   "homepage": "https://github.com/nick-dolf/tree-rat#readme",
   "dependencies": {
+    "autoprefixer": "^10.4.15",
     "chokidar": "^3.5.3",
     "connect-livereload": "^0.6.1",
     "cookie-session": "^2.0.0",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "fs-extra": "^11.1.1",
+    "jquery": "^3.7.1",
     "livereload": "^0.9.3",
+    "multer": "^1.4.5-lts.1",
+    "postcss": "^8.4.30",
     "puff-cheeks": "^1.0.0",
+    "sass": "^1.67.0",
+    "slugify": "^1.6.6",
     "validator": "^13.11.0"
   }
 }
