--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+scratch.js
+
 # Logs
 logs
 *.log
@@ -129,6 +131,6 @@ dist
 .yarn/install-state.gz
 .pnp.*
 
-# Tree Rat
+# Puff Cheeks
 secrets
 site
